--- a/Client/Views/ChatUC.xaml
+++ b/Client/Views/ChatUC.xaml
@@ -114,7 +114,7 @@
             <TextBlock DockPanel.Dock="Left" Margin="20,0,0,0" Text="{Binding Path=Chat.UserIsWriting}" FontSize="30" Foreground="{StaticResource WritingForeground}"/>
 
             <Image DockPanel.Dock="Right" Style="{StaticResource AvatarImageStyle}"/>
-            <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="0,5,25,5" Height="40" Template="{StaticResource ButtonTemplate}" Command="{Binding EditChatCommand}" Width="100">
+            <Button Content="{DynamicResource EditChat}" IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Margin="0,5,25,5" Height="40" Template="{StaticResource ButtonTemplate}" Command="{Binding EditChatCommand}" Width="100">
                 <Button.Style>
                     <Style BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
                         <Style.Triggers>
@@ -125,7 +125,7 @@
                     </Style>
                 </Button.Style>
             </Button>
-            <Button DockPanel.Dock="Right" Content="Leave" Margin="0,5,15,5" Height="40" Template="{StaticResource ButtonTemplate}" Command="{Binding LeaveChatCommand}" Width="100"/>
+            <Button DockPanel.Dock="Right" Content="{DynamicResource Leave}" Margin="0,5,15,5" Height="40" Template="{StaticResource ButtonTemplate}" Command="{Binding LeaveChatCommand}" Width="100"/>
 
             <CheckBox x:Name="canNotifyCheckBox" IsChecked="{Binding Path=CanNotify}" Cursor="Hand" IsThreeState="True" DockPanel.Dock="Right" Margin="0,0,25,0" Template="{StaticResource ModernCheckBox}" Command="{Binding CanNotifyChangedCommand}" Click="canNotifyCheckBox_Click"/>
 
@@ -181,9 +181,9 @@
 
             <UC:ActionableContentPresenter x:Name="input" IsEnabled="{Binding Path=Chat.CanWrite}" Content="{Binding Path=InputMessage}" ContentTemplateSelector="{StaticResource InputMessageTemplateSelector}" ContentChanged="input_ContentChanged"/>
 
-            <Button Grid.Column="1" Content="Smile" FontSize="20" IsCancel="{Binding Path=Chat.CanWrite}" Margin="5,0" Template="{StaticResource ButtonTemplate}" Command="{Binding OpenEmojisCommand}"/>
+            <Button Grid.Column="1" Content="{DynamicResource Smile}" FontSize="20" IsCancel="{Binding Path=Chat.CanWrite}" Margin="5,0" Template="{StaticResource ButtonTemplate}" Command="{Binding OpenEmojisCommand}"/>
 
-            <Button Grid.Column="2" Content="File" FontSize="20" IsEnabled="{Binding Path=Chat.CanWrite}" Margin="5,0" Template="{StaticResource ButtonTemplate}" Command="{Binding OpenFileCommand}"/>
+            <Button Grid.Column="2" Content="{DynamicResource File}" FontSize="20" IsEnabled="{Binding Path=Chat.CanWrite}" Margin="5,0" Template="{StaticResource ButtonTemplate}" Command="{Binding OpenFileCommand}"/>
         </Grid>
     </Grid>
 
@@ -192,7 +192,7 @@
             <i:InvokeCommandAction Command="{Binding UnloadCommand}"/>
         </i:EventTrigger>
         <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding LoadCommand}"></i:InvokeCommandAction>
+            <i:InvokeCommandAction Command="{Binding LoadCommand}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
 </UserControl>
