--- a/Client/Views/HelpUC.xaml
+++ b/Client/Views/HelpUC.xaml
@@ -15,8 +15,8 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock TextWrapping="WrapWithOverflow" Text="Hello dear user, welcome to the LetsTalk chat app!"  FontSize="30" Foreground="{StaticResource ButtonBackground}" Margin="50, 15"/>
-            <TextBlock TextWrapping="WrapWithOverflow" Text="Select the chat you need from the menu list in order to start chatting or create a new one" FontSize="30"  Margin="50, 5" Foreground="{StaticResource ButtonBackground}"></TextBlock>
+            <TextBlock TextWrapping="WrapWithOverflow" Text="{DynamicResource HelloUser}"  FontSize="30" Foreground="{StaticResource ButtonBackground}" Margin="50, 15"/>
+            <TextBlock TextWrapping="WrapWithOverflow" Text="{DynamicResource HelpUser}" FontSize="30"  Margin="50, 5" Foreground="{StaticResource ButtonBackground}"></TextBlock>
         </StackPanel>
         <Image Grid.Row="1" Source="/Resources/logo.png" Margin="0, 40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
